<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".InviteActivity"
	android:id="@+id/coordinatorLayout">
	
	<include
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		layout="@layout/title_bar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:id="@+id/title_bar" />
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:background="#FFFFFF"
		android:id="@+id/linearLayout"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title_bar"
		android:padding="14dp">
		
		<TextView
			android:text="Who would you like to invite? (Leave blank to invite everyone):"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/textView2"
			android:textSize="16sp"
			android:textColor="#000000" />
		
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/inviteOpponentNameText"
			android:textColor="#000000"
			android:hint="Inviting everyone"
			android:minHeight="48dp" />
		
		<TextView
			android:text="What would you like to play?"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/textView3"
			android:textSize="16sp"
			android:textColor="@color/black" />
		
		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/game_type_radio">
			
			<RadioButton
				android:text="TicTacToe"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tic_tac_toe_radio"
				android:checked="true" />
			
			<RadioButton
				android:text="RockPaperScissors"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/rock_paper_scissors_radio" />
		</RadioGroup>
		
		<Button
			android:text="Send Invitation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/sendInvitationButton"
			android:onClick="onSendInvitation" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>