<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="60dp"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintEnd_toEndOf="parent"
	android:background="@color/purple_500"
	android:id="@+id/title_bar"
	tools:showIn="@layout/activity_tic_tac_toe">
	
	<ImageButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:srcCompat="?attr/homeAsUpIndicator"
		android:id="@+id/back_button"
		android:onClick="onBack"
		android:minHeight="56dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="10dp"
		android:minWidth="56dp"
		android:backgroundTint="@color/white" />
	
	<TextView
		android:text="Title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/title_text"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/back_button"
		android:layout_marginStart="10dp"
		android:textColor="@color/white"
		android:textStyle="bold"
		android:textSize="28sp" />
	
	<Button
		android:text="Button"
		android:layout_width="wrap_content"
		android:layout_height="56dp"
		android:id="@+id/next_button"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="10dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:textColor="@color/black"
		android:backgroundTint="@color/white"
		android:onClick="onNext" />
	
</androidx.constraintlayout.widget.ConstraintLayout>