<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/gamestate_item">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:background="@color/teal_200"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="2dp"
		android:layout_marginStart="2dp"
		android:layout_marginEnd="2dp"
		android:layout_marginBottom="2dp"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintVertical_bias="0.0"
		android:id="@+id/gamestate_item_inner">
		
		<TextView
			android:text="TicTacToe"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/gamestate_gametype"
			android:textColor="@color/black"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="10dp"
			android:layout_marginStart="10dp"
			android:textSize="20sp"
			android:textStyle="bold" />
		
		<TextView
			android:text="vs Sara"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/gamestate_opponentname"
			android:textColor="@color/black"
			android:textSize="18sp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="20dp"
			app:layout_constraintTop_toBottomOf="@+id/gamestate_gametype"
			android:layout_marginTop="10dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="10dp" />
		
		<TextView
			android:text="Victory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/status_text"
			android:textColor="@color/black"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/gamestate_play_button"
			android:layout_marginEnd="16dp"
			android:textSize="20sp" />
		
		<Button
			android:text="Play"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/gamestate_play_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="10dp"
			android:layout_marginBottom="10dp" />
	
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>