...
			android:gravity="center">
			
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
				android:id="@+id/field10"
				android:textAlignment="center"
				android:textSize="20sp" />
			
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
				android:id="@+id/field11"
				android:text="X"
				android:textAlignment="center"
				android:textSize="20sp" />
			
			<Button
				android:layout_width="wrap_content"
...
